# claude-manager

./: .gitignore  Cargo.toml  README.md  config.toml.example
.omc/: project-memory.json
.omc/sessions/: da97f303-9ee8-40f6-8be5-d8feae415d78.json
.omc/state/: agent-replay-da97f303-9ee8-40f6-8be5-d8feae415d78.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-09T09-40-13-943Z.json  checkpoint-2026-04-09T11-46-25-180Z.json  checkpoint-2026-04-10T03-13-10-810Z.json  checkpoint-2026-04-10T06-03-10-665Z.json
crates/scanner-claude/: Cargo.toml
crates/scanner-claude-code/: Cargo.toml
crates/scanner-claude-code/src/: lib.rs
crates/scanner-claude/src/: lib.rs
crates/scanner-core/: Cargo.toml
crates/scanner-core/src/: lib.rs
crates/scanner-cursor/: Cargo.toml
crates/scanner-cursor/src/: lib.rs
crates/scanner-generic/: Cargo.toml
crates/scanner-generic/src/: lib.rs
crates/scanner-opencode/: Cargo.toml
crates/scanner-opencode/src/: lib.rs
crates/scanner-windsurf/: Cargo.toml
crates/scanner-windsurf/src/: lib.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: db.rs  error.rs  lib.rs  models.rs  store.rs
docs/superpowers/plans/: 2026-04-10-directory-grouping.md
docs/superpowers/specs/: 2026-04-10-directory-grouping-design.md
sm/: Cargo.toml
sm/src/: config.rs  main.rs  tui.rs  web.rs
