[package]
name = "sm"
version.workspace = true
edition.workspace = true

[dependencies]
session-store = { path = "../crates/session-store" }
scanner-core = { path = "../crates/scanner-core" }
scanner-claude = { path = "../crates/scanner-claude" }
scanner-opencode = { path = "../crates/scanner-opencode" }
clap.workspace = true
toml.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
arboard.workspace = true
crossterm.workspace = true
